<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/prompt_name"
        android:inputType="textEmailAddress"
        android:textColor="@color/secondaryTextColor"
        android:textColorHint="@color/secondaryTextColor" />

    <EditText
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:hint="@string/prompt_country"
        android:inputType="textEmailAddress"
        android:textColor="@color/secondaryTextColor"
        android:textColorHint="@color/secondaryTextColor" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/secondaryTextColor"
        android:textColorHint="@color/secondaryTextColor" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColor="@color/secondaryTextColor"
        android:textColorHint="@color/secondaryTextColor"  />

    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:background="@color/submitBtnColor"
        android:text="@string/action_sign_in"
        android:textColor="@color/color2" />

    <TextView
        android:id="@+id/alreadyRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="555dp"
        android:text="@string/Already_Registered"
        android:textColor="@color/secondaryTextColor" />

</RelativeLayout>