<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".formActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/khtamah_form"/>

    <EditText
        android:id="@+id/nameOfPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:textAlignment="center"
        android:textSize="22sp"
        android:gravity="center"
        android:ems="10"
        android:hint="@string/name_of_person"
        android:inputType="textEmailAddress"
        android:textColor="@color/secondaryTextColor"
        android:textColorHint="@color/secondaryTextColor" />

    <Spinner
        android:id="@+id/surah"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:dropDownSelector="@color/colorPrimary"
        android:gravity="center"
        android:textSize="25sp" />

    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
        android:id="@+id/ayahNumBtnSt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="400dp"
        app:backGroundColor="@color/primaryColor"/>

    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
        android:id="@+id/ayahNumBtnEn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="450dp"
        app:backGroundColor="@color/primaryColor"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:text="@string/submit_btn"
        android:textColor="@color/color2"
        android:background="@color/submitBtnColor"/>

</RelativeLayout>